[gd_scene load_steps=23 format=3 uid="uid://b8dotn0iuivrd"]

[ext_resource type="Script" uid="uid://xuh2opiptmhm" path="res://modules/world_player_v2/player.gd" id="1_player"]
[ext_resource type="Script" uid="uid://c8y54d5s4ct3h" path="res://modules/world_player_v2/features/body_movement/player_movement.gd" id="2_movement"]
[ext_resource type="Script" uid="uid://b2srj3lepsdhr" path="res://modules/world_player_v2/features/body_camera/player_camera.gd" id="3_camera"]
[ext_resource type="Script" uid="uid://cuskdtp03uds8" path="res://modules/world_player_v2/features/data_inventory/hotbar.gd" id="4_hotbar"]
[ext_resource type="Script" uid="uid://bto1a6aotugyy" path="res://modules/world_player_v2/features/ui_modes/mode_manager.gd" id="5_mode_manager"]
[ext_resource type="Script" uid="uid://bg0nkbklyomn1" path="res://modules/world_player_v2/features/data_inventory/item_use_router.gd" id="6_item_router"]
[ext_resource type="Script" uid="uid://bc3vrfysrafn1" path="res://modules/world_player_v2/features/tool_combat/combat_system.gd" id="7_combat_system"]
[ext_resource type="Script" uid="uid://cyi8hqxoxxf13" path="res://modules/world_player_v2/features/tool_building/build_mode.gd" id="8_mode_build"]
[ext_resource type="Script" uid="uid://c44rpw7dt12pq" path="res://modules/world_player_v2/features/ui_modes/mode_editor.gd" id="9_mode_editor"]
[ext_resource type="Script" uid="uid://dqq53ig6w7wm4" path="res://modules/world_player_v2/features/data_inventory/inventory.gd" id="10_inventory"]
[ext_resource type="Script" uid="uid://cwvskb6au45e2" path="res://modules/world_player_v2/features/tool_interaction/player_interaction.gd" id="11_interaction"]
[ext_resource type="Script" uid="uid://jc5j38s1vbni" path="res://modules/world_player_v2/features/tool_combat/player_combat.gd" id="12_combat"]
[ext_resource type="PackedScene" path="res://modules/world_player_v2/features/ui_hud/player_hud.tscn" id="13_hud"]
[ext_resource type="Script" uid="uid://x7daoavkwyr7" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_arms.gd" id="15_arms"]
[ext_resource type="Script" uid="uid://cs5ph0nb42pji" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_pistol.gd" id="16_pistol"]
[ext_resource type="Script" uid="uid://ccr7ty807oero" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_axe.gd" id="17_axe"]
[ext_resource type="Script" uid="uid://gd7lpgjr1uht" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_pickaxe.gd" id="18_pickaxe"]
[ext_resource type="Script" uid="uid://ktyjo5q31em4" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_shovel.gd" id="18_shovel"]
[ext_resource type="Script" uid="uid://twk217xf32bm" path="res://modules/world_player_v2/features/tool_terrain/terrain_interaction.gd" id="18_terrain"]
[ext_resource type="Script" uid="uid://btccyk8is8eo6" path="res://modules/world_player_v2/features/tool_combat/weapons/first_person_terraformer.gd" id="19_terraformer"]
[ext_resource type="Script" uid="uid://bskmyabeyh05o" path="res://modules/world_player_v2/features/body_movement/player_crouch.gd" id="20_crouch"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[node name="WorldPlayerV2" type="CharacterBody3D" groups=["player"]]
collision_layer = 3
collision_mask = 141
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true

[node name="Components" type="Node" parent="."]

[node name="Movement" type="Node" parent="Components"]
script = ExtResource("2_movement")

[node name="Crouch" type="Node" parent="Components"]
script = ExtResource("20_crouch")

[node name="Camera" type="Node" parent="Components"]
script = ExtResource("3_camera")

[node name="Interaction" type="Node" parent="Components"]
script = ExtResource("11_interaction")

[node name="Combat" type="Node" parent="Components"]
script = ExtResource("12_combat")

[node name="FirstPersonArms" type="Node" parent="Components"]
script = ExtResource("15_arms")

[node name="FirstPersonPistol" type="Node" parent="Components"]
script = ExtResource("16_pistol")

[node name="FirstPersonAxe" type="Node" parent="Components"]
script = ExtResource("17_axe")

[node name="FirstPersonPickaxe" type="Node" parent="Components"]
script = ExtResource("18_pickaxe")

[node name="FirstPersonShovel" type="Node" parent="Components"]
script = ExtResource("18_shovel")

[node name="FirstPersonTerraformer" type="Node" parent="Components"]
script = ExtResource("19_terraformer")

[node name="Systems" type="Node" parent="."]

[node name="Hotbar" type="Node" parent="Systems"]
script = ExtResource("4_hotbar")

[node name="ModeManager" type="Node" parent="Systems"]
script = ExtResource("5_mode_manager")

[node name="ItemUseRouter" type="Node" parent="Systems"]
script = ExtResource("6_item_router")

[node name="Inventory" type="Node" parent="Systems"]
script = ExtResource("10_inventory")

[node name="Modes" type="Node" parent="."]

[node name="CombatSystem" type="Node" parent="Modes"]
script = ExtResource("7_combat_system")

[node name="ModeBuild" type="Node" parent="Modes"]
script = ExtResource("8_mode_build")

[node name="ModeEditor" type="Node" parent="Modes"]
script = ExtResource("9_mode_editor")

[node name="TerrainInteraction" type="Node" parent="Modes"]
script = ExtResource("18_terrain")

[node name="PlayerHUD" parent="." instance=ExtResource("13_hud")]
